chore: chunk file and process for each chunk in case get error, it do not need recompute

--- a/vividbot/data/test.ipynb
+++ b/vividbot/data/test.ipynb
@@ -579,14 +579,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/duytran/miniconda3/envs/vividbot/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2000001\n"
+     ]
+    }
+   ],
    "source": [
     "from datasets import load_dataset\n",
     "data = load_dataset(\"json\", data_files=\"/home/duytran/Downloads/vividbot_data/Vast2M.json\")\n",
     "\n",
-    "print(list(data[\"train\"].features.keys()))"
+    "print(len(data[\"train\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Saving the dataset (1/1 shards): 100%|██████████| 62501/62501 [00:00<00:00, 970807.78 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 62500/62500 [00:00<00:00, 1031007.63 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 62500/62500 [00:00<00:00, 1055844.43 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 62500/62500 [00:00<00:00, 1049692.87 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 62500/62500 [00:00<00:00, 1079959.63 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 62500/62500 [00:00<00:00, 1110991.50 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 62500/62500 [00:00<00:00, 1112306.73 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 62500/62500 [00:00<00:00, 1099814.14 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 62500/62500 [00:00<00:00, 1099555.81 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 62500/62500 [00:00<00:00, 1089289.28 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 62500/62500 [00:00<00:00, 1081041.85 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 62500/62500 [00:00<00:00, 1092694.64 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 62500/62500 [00:00<00:00, 1094556.11 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 62500/62500 [00:00<00:00, 1087978.22 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 62500/62500 [00:00<00:00, 1074351.85 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 62500/62500 [00:00<00:00, 1066163.43 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 62500/62500 [00:00<00:00, 887766.06 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 62500/62500 [00:00<00:00, 1114965.51 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 62500/62500 [00:00<00:00, 1096272.63 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 62500/62500 [00:00<00:00, 1073872.13 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 62500/62500 [00:00<00:00, 1083732.28 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 62500/62500 [00:00<00:00, 1075824.48 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 62500/62500 [00:00<00:00, 1088913.72 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 62500/62500 [00:00<00:00, 1090871.26 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 62500/62500 [00:00<00:00, 1094757.24 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 62500/62500 [00:00<00:00, 1039828.96 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 62500/62500 [00:00<00:00, 1059248.99 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 62500/62500 [00:00<00:00, 1092977.10 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 62500/62500 [00:00<00:00, 1091202.74 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 62500/62500 [00:00<00:00, 1077597.87 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 62500/62500 [00:00<00:00, 1081411.99 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 62500/62500 [00:00<00:00, 1078174.03 examples/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# devide dataset into num chunks\n",
+    "num_shards = 32\n",
+    "for shard_idx in range(num_shards):\n",
+    "    shard = data[\"train\"].shard(num_shards=num_shards, index=shard_idx, contiguous=True)\n",
+    "    shard.save_to_disk(f\"/home/duytran/Downloads/cache_dir/shard_{shard_idx}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datasets import load_from_disk\n",
+    "shard_0 = load_from_disk(f\"/home/duytran/Downloads/cache_dir/shard_31\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reload later\n",
+    "from datasets import load_from_disk, concatenate_datasets\n",
+    "ds = concatenate_datasets([\n",
+    "    load_from_disk(f\"/home/duytran/Downloads/cache_dir/shard_{shard_idx}\")\n",
+    "    for shard_idx in range(num_shards)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(ds))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32\n"
+     ]
+    }
+   ],
+   "source": [
+    "# read number folder in a folder\n",
+    "import os\n",
+    "path = \"/home/duytran/Downloads/cache_dir\"\n",
+    "\n",
+    "print(len(os.listdir(path)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "OSError",
+     "evalue": "[Errno 39] Directory not empty: '/home/duytran/Downloads/cache_dir/temp/shard_0/'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrmdir\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m/home/duytran/Downloads/cache_dir/temp/shard_0/\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mOSError\u001b[0m: [Errno 39] Directory not empty: '/home/duytran/Downloads/cache_dir/temp/shard_0/'"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.rmdir(\"/home/duytran/Downloads/cache_dir/temp/shard_0/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shutil\n",
+    "\n",
+    "# Specify the path of the folder you want to remove\n",
+    "folder_path = '/home/duytran/Downloads/cache_dir/temp/shard_0'\n",
+    "\n",
+    "# Remove the folder and all its contents\n",
+    "shutil.rmtree(folder_path)"
    ]
   },
   {
