chore: fixed the vast2m

--- a/vividbot/data/test.ipynb
+++ b/vividbot/data/test.ipynb
@@ -611,6 +611,23 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['clip_id', 'clip_span', 'url', 'vision_cap', 'audio_cap', 'subtitle', 'vast_cap'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data[\"train\"].features.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -659,12 +676,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "from datasets import load_from_disk\n",
-    "shard_0 = load_from_disk(f\"/home/duytran/Downloads/cache_dir/shard_31\")"
+    "shard_0 = load_from_disk(f\"/home/duytran/Downloads/cache_dir/result/shard_0\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id': '004539375', 'image': '00453/004539375.jpg', 'conversations': [{'from': 'human', 'value': 'Hãy cho biết tóm lược nhanh về nội dung chính của video.\\\\n>video>\\n<video>'}, {'from': 'gpt', 'value': 'chọn đồ nội thất sang trọng 3 - inch gel nệm mút topper'}]}\n",
+      "{'id': '002239345', 'image': '00223/002239345.jpg', 'conversations': [{'from': 'human', 'value': 'Kể lại nội dung của video clip một cách ngắn gọn và rõ ràng.\\n<video>'}, {'from': 'gpt', 'value': 'một chiếc đồng hồ màu xám với dây đeo kiểu quân đội'}]}\n",
+      "{'id': '005947502', 'image': '00594/005947502.jpg', 'conversations': [{'from': 'human', 'value': 'Giải nghĩa nhanh video này để mình hiểu.\\n<video>'}, {'from': 'gpt', 'value': 'hình ảnh rồng diều bay trên bầu trời xanh'}]}\n",
+      "{'id': '005116462', 'image': '00511/005116462.jpg', 'conversations': [{'from': 'human', 'value': 'Cung cấp mô tả ngắn gọn về video clip được đưa ra.\\n<video>'}, {'from': 'gpt', 'value': '$ 10 - Váy mini in hình giá rẻ dễ thương - Áo dài tay ngắn in hoa kiểu nông dân kaki sọc nhiều màu'}]}\n",
+      "{'id': '002017886', 'image': '00201/002017886.jpg', 'conversations': [{'from': 'human', 'value': 'Nêu bật những điểm quan trọng của video clip trong vài câu.\\n<video>'}, {'from': 'gpt', 'value': 'thực tế tăng cường sử dụng dấu aruco trong opencv'}]}\n",
+      "{'id': '001819539', 'image': '00181/001819539.jpg', 'conversations': [{'from': 'human', 'value': 'Cho mình xin vài ý tóm tắt về video này để nắm.\\n<video>'}, {'from': 'gpt', 'value': 'một đôi bốt trẻ em có hình đôi giày dệt kim'}]}\n",
+      "{'id': '002838027', 'image': '00283/002838027.jpg', 'conversations': [{'from': 'human', 'value': 'Mô tả ngắn gọn về video sau.\\n<video>'}, {'from': 'gpt', 'value': 'clip nghệ thuật màu nước hoa hoa hồng viền hoa hồng'}]}\n",
+      "{'id': '000406392', 'image': '00040/000406392.jpg', 'conversations': [{'from': 'human', 'value': 'Mình cần nắm được nội dung cơ bản của video, bạn có thể tóm tắt giúp không?\\n<video>'}, {'from': 'gpt', 'value': 'nữ hoàng thần thánh trong chiếc mặt nạ in canvas cầu kỳ có khuôn mặt và bàn tay của một người phụ nữ có mái tóc đỏ'}]}\n",
+      "{'id': '006288475', 'image': '00628/006288475.jpg', 'conversations': [{'from': 'human', 'value': 'Bạn có thể cho tôi biết video này nói về cái gì không?\\n<video>'}, {'from': 'gpt', 'value': 'Ảnh chụp từ trên không của Paris vào ban đêm từ máy bay'}]}\n",
+      "{'id': '000075539', 'image': '00007/000075539.jpg', 'conversations': [{'from': 'human', 'value': 'Nhìn vào video, bạn có thể hiểu được nội dung chính không? Hãy cho mình biết nhé.\\n<video>'}, {'from': 'gpt', 'value': 'giày nike air trainer màu nâu sa mạc và đen'}]}\n",
+      "{'id': '001649122', 'image': '00164/001649122.jpg', 'conversations': [{'from': 'human', 'value': 'Tóm tắt nội dung của video sau.\\n<video>'}, {'from': 'gpt', 'value': 'một hình minh họa của một DJ trong đám đông với dòng chữ so dop'}]}\n",
+      "{'id': '002326944', 'image': '00232/002326944.jpg', 'conversations': [{'from': 'human', 'value': 'Xem video xong, bạn có thể chia sẻ ý chính không?\\n<video>'}, {'from': 'gpt', 'value': 'Mặt bằng nhà kiểu biệt thự, 1 phòng ngủ'}]}\n",
+      "{'id': '000093116', 'image': '00009/000093116.jpg', 'conversations': [{'from': 'human', 'value': 'Nhìn vào video, bạn có thể hiểu được nội dung chính không? Hãy cho mình biết nhé.\\n<video>'}, {'from': 'gpt', 'value': 'một con mèo nhìn lại ngồi trên một tảng đá ở đại dương kỳ nghỉ & du lịch bãi biển mùa hè động vật đại dương động vật cưng con chó'}]}\n",
+      "{'id': '000951660', 'image': '00095/000951660.jpg', 'conversations': [{'from': 'human', 'value': 'Bạn có thể cho tôi biết video này nói về cái gì không?\\n<video>'}, {'from': 'gpt', 'value': 'một thùng đồ chơi nhỏ có in hình gấu trúc'}]}\n",
+      "{'id': '006366709', 'image': '00636/006366709.jpg', 'conversations': [{'from': 'human', 'value': 'Mô tả ngắn gọn về video sau.\\n<video>'}, {'from': 'gpt', 'value': 'doanh nhân tại bàn hội nghị, với dòng chữ cho biết lý do tại sao các nhà quản lý thông minh không tổ chức các cuộc họp bán hàng'}]}\n",
+      "{'id': '000205111', 'image': '00020/000205111.jpg', 'conversations': [{'from': 'human', 'value': 'Xem video xong, bạn có thể chia sẻ ý chính không?\\n<video>'}, {'from': 'gpt', 'value': 'chương trình hoạt hình hạt đậu phộng, với một cô gái và một người đàn ông giơ cao một tấm biển ghi rằng cô ấy'}]}\n",
+      "{'id': '003062571', 'image': '00306/003062571.jpg', 'conversations': [{'from': 'human', 'value': 'Nhìn vào video, bạn có thể hiểu được nội dung chính không? Hãy cho mình biết nhé.\\n<video>'}, {'from': 'gpt', 'value': 'ốp lưng anker cho jbl boom 2'}]}\n",
+      "{'id': '005531752', 'image': '00553/005531752.jpg', 'conversations': [{'from': 'human', 'value': 'Mình cần nắm được nội dung cơ bản của video, bạn có thể tóm tắt giúp không?\\n<video>'}, {'from': 'gpt', 'value': 'gói yên trước được gắn vào yên xe đạp'}]}\n",
+      "{'id': '005389063', 'image': '00538/005389063.jpg', 'conversations': [{'from': 'human', 'value': 'Giải thích ngắn gọn về những gì được trình chiếu trong video.\\n<video>'}, {'from': 'gpt', 'value': 'Elisabeth Henning'}]}\n",
+      "{'id': '003713357', 'image': '00371/003713357.jpg', 'conversations': [{'from': 'human', 'value': 'Bằng vài lời, phác họa nội dung của video dưới đây.\\n<video>'}, {'from': 'gpt', 'value': 'một nhóm người trên một chiếc bè bơm hơi, trên dòng sông nước trắng xóa với sóng vỗ'}]}\n",
+      "{'id': '001489285', 'image': '00148/001489285.jpg', 'conversations': [{'from': 'human', 'value': 'Cung cấp mô tả ngắn gọn về video clip được đưa ra.\\n<video>'}, {'from': 'gpt', 'value': 'một nón giao thông màu cam với đèn nhấp nháy màu đỏ'}]}\n",
+      "{'id': '003569527', 'image': '00356/003569527.jpg', 'conversations': [{'from': 'human', 'value': 'Cho mình xin vài ý tóm tắt về video này để nắm.\\n<video>'}, {'from': 'gpt', 'value': 'tính toán cho pca'}]}\n",
+      "{'id': '000082148', 'image': '00008/000082148.jpg', 'conversations': [{'from': 'human', 'value': 'Bạn có thể cho mình biết video này đang diễn ra sự kiện gì không?\\n<video>'}, {'from': 'gpt', 'value': 'lời chúc giáng sinh với vòng hoa và món trang sức màu đỏ trên nền trắng văn bản giáng sinh scandinavian'}]}\n",
+      "{'id': '000956213', 'image': '00095/000956213.jpg', 'conversations': [{'from': 'human', 'value': 'Cho mình xin vài ý tóm tắt về video này để nắm.\\n<video>'}, {'from': 'gpt', 'value': 'tấm thảm mới của nickelodeons'}]}\n",
+      "{'id': '006498284', 'image': '00649/006498284.jpg', 'conversations': [{'from': 'human', 'value': 'Tóm tắt ngắn gọn nhưng cung cấp đầy đủ thông tin về video clip này.\\n<video>'}, {'from': 'gpt', 'value': 'gói nhãn dán và nhãn dán máy pha cà phê'}]}\n",
+      "{'id': '003618761', 'image': '00361/003618761.jpg', 'conversations': [{'from': 'human', 'value': 'Bạn có thể cho mình biết video này đang diễn ra sự kiện gì không?\\n<video>'}, {'from': 'gpt', 'value': 'Áo tập dài tay 18/21 của nữ Arsenal'}]}\n",
+      "{'id': '004564488', 'image': '00456/004564488.jpg', 'conversations': [{'from': 'human', 'value': 'Tóm tắt nội dung của video sau.\\n<video>'}, {'from': 'gpt', 'value': 'một nhóm thiết bị xe máy và mũ bảo hiểm của Anh'}]}\n",
+      "{'id': '004398009', 'image': '00439/004398009.jpg', 'conversations': [{'from': 'human', 'value': 'Diễn giải một cách ngắn gọn về video được cung cấp.\\n<video>'}, {'from': 'gpt', 'value': 'một cuốn sách màu đỏ tía với một chiếc thuyền nổi trên mặt nước'}]}\n",
+      "{'id': '003472061', 'image': '00347/003472061.jpg', 'conversations': [{'from': 'human', 'value': 'Mình cần nắm được nội dung cơ bản của video, bạn có thể tóm tắt giúp không?\\n<video>'}, {'from': 'gpt', 'value': 'rochelle lovett và joe manda'}]}\n",
+      "{'id': '003362053', 'image': '00336/003362053.jpg', 'conversations': [{'from': 'human', 'value': 'Bằng vài lời, phác họa nội dung của video dưới đây.\\n<video>'}, {'from': 'gpt', 'value': 'twit, từ đồng nghĩa với twit, từ đồng nghĩa với twit'}]}\n",
+      "{'id': '002972155', 'image': '00297/002972155.jpg', 'conversations': [{'from': 'human', 'value': 'Mô tả ngắn gọn về video sau.\\n<video>'}, {'from': 'gpt', 'value': 'Hội chợ nhà sản xuất trên nền xanh trắng có logo của Hội chợ nhà sản xuất trên đó'}]}\n",
+      "{'id': '001745272', 'image': '00174/001745272.jpg', 'conversations': [{'from': 'human', 'value': 'Giải thích ngắn gọn và rõ ràng về video clip phía dưới.\\n<video>'}, {'from': 'gpt', 'value': 'kính râm alpina explorer đen mờ'}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in shard_0:\n",
+    "    print(i)"
    ]
   },
   {
@@ -700,23 +766,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "32\n"
+      "json\n"
      ]
     }
    ],
    "source": [
     "# read number folder in a folder\n",
     "import os\n",
-    "path = \"/home/duytran/Downloads/cache_dir\"\n",
+    "path = \"/home/duytran/Downloads/cache_dir.json\"\n",
     "\n",
-    "print(len(os.listdir(path)))"
+    "print(path.split(\"/\")[-1].split(\".\")[-1])"
    ]
   },
   {
@@ -754,6 +820,24 @@
     "\n",
     "# Remove the folder and all its contents\n",
     "shutil.rmtree(folder_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "print(os.cpu_count())"
    ]
   },
   {
