chore: update vast2m

--- a/vividbot/data/test.ipynb
+++ b/vividbot/data/test.ipynb
@@ -842,6 +842,80 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Generating train split: 1999983 examples [00:00, 2053978.54 examples/s]\n",
+      "Creating parquet from Arrow format: 100%|██████████| 1000/1000 [00:00<00:00, 1104.39ba/s]\n",
+      "Creating parquet from Arrow format: 100%|██████████| 1000/1000 [00:00<00:00, 1110.00ba/s]\n",
+      "Uploading the dataset shards: 100%|██████████| 2/2 [00:50<00:00, 25.02s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CommitInfo(commit_url='https://huggingface.co/datasets/Vividbot/vast27_en/commit/4aa235b8b7021c503dedd810aacb052533e9b31a', commit_message='Upload dataset', commit_description='', oid='4aa235b8b7021c503dedd810aacb052533e9b31a', pr_url=None, pr_revision=None, pr_num=None)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datasets import load_dataset\n",
+    "data = load_dataset(\"json\", data_files=\"/home/duytran/Downloads/output_ds/vast2m-vi.json\")\n",
+    "data.push_to_hub(\"Vividbot/vast27_en\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading readme: 100%|██████████| 423/423 [00:00<00:00, 926kB/s]\n",
+      "Downloading data: 100%|██████████| 153M/153M [00:14<00:00, 10.8MB/s] \n",
+      "Downloading data: 100%|██████████| 153M/153M [00:14<00:00, 10.8MB/s] \n",
+      "Generating train split: 100%|██████████| 1999983/1999983 [00:02<00:00, 935160.73 examples/s] \n"
+     ]
+    }
+   ],
+   "source": [
+    "from datasets import load_dataset\n",
+    "\n",
+    "# If the dataset is gated/private, make sure you have run huggingface-cli login\n",
+    "dataset = load_dataset(\"Vividbot/vast27_en\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id': 'mmfqMSqa8-Q.10', 'video': 'mmfqMSqa8-Q.10.mp4', 'conversation': [{'from': 'human', 'value': 'Hãy cho biết tóm lược nhanh về nội dung chính của video.\\\\n>video>\\n<video>'}, {'from': 'gpt', 'value': 'Ba cô gái đang nói, và người đàn ông đang nói về trải nghiệm của anh ấy, và họ cảm thấy họ như gia đình đối với anh ấy, và anh ấy yêu bóng chuyền.'}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in dataset[\"train\"]:\n",
+    "    print(i)\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
