chore: update insstruct500k

--- a/vividbot/data/test.ipynb
+++ b/vividbot/data/test.ipynb
@@ -958,6 +958,104 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/duytran/miniconda3/envs/vividbot/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Creating json from Arrow format: 100%|██████████| 2001/2001 [00:53<00:00, 37.31ba/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1047563641"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import polars as pl\n",
+    "import json\n",
+    "from datasets import load_dataset, Dataset\n",
+    "\n",
+    "path_chunk_en = \"/home/duytran/Downloads/output_ds/vast_2m_chunk_en/shard_0.json\"\n",
+    "vi_dataset_path = \"/home/duytran/Downloads/output_ds/vast2M_vi.json\"\n",
+    "output_dir = \"/home/duytran/Downloads/output_ds/temp\"\n",
+    " \n",
+    "id = \"G1DRYgjsZTw.63\"\n",
+    "# read vi data\n",
+    "vi_data = load_dataset(\"json\", data_files=vi_dataset_path)[\"train\"]\n",
+    "vi_data = vi_data.to_polars()\n",
+    "en_data = load_dataset(\"json\", data_files=path_chunk_en)[\"train\"]\n",
+    "en_data = en_data.to_polars()\n",
+    "\n",
+    "# rename column\n",
+    "en_data = en_data.rename({\"clip_id\": \"id\"})\n",
+    "\n",
+    "new_data = vi_data.join(en_data, on=\"id\", how=\"left\")\n",
+    "new_data = Dataset.from_pandas(new_data.to_pandas())\n",
+    "\n",
+    "# write json file for each \n",
+    "new_data.to_json(\n",
+    "            output_dir + \"/shard_0_new.json\",\n",
+    "            orient=\"records\",\n",
+    "            lines=True,\n",
+    "            force_ascii=False,\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
