chore: update instruct500k vietnamese builder hf

--- a/vividbot/data/test.ipynb
+++ b/vividbot/data/test.ipynb
@@ -1201,7 +1201,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import io\n",
+    "import numpy as np    \n",
+    "from PIL import Image\n",
+    "\n",
+    "def extract_image(image_bytes):\n",
+    "    img = Image.open(io.BytesIO(image_bytes))\n",
+    "    arr = np.asarray(img)\n",
+    "    return arr\n"
+   ]
   }
  ],
  "metadata": {
