chore: add code for video instruck 100k

--- a/vividbot/data/test.ipynb
+++ b/vividbot/data/test.ipynb
@@ -1266,6 +1266,98 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Generating train split: 100010 examples [00:00, 210069.87 examples/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datasets import load_dataset\n",
+    "\n",
+    "path = \"/home/duytran/Downloads/vividbot_data/VideoInstruct_Dataset.json\"\n",
+    "\n",
+    "data = load_dataset(\"json\", data_files=path)[\"train\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100010\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GqWH2IYPw6U\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data[1][\"video_id\"][2:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'q': 'What are the main activities that take place in the video?', 'video_id': 'v_k_ZXmr8pmrs', 'a': 'The main activities that take place in the video are the preparation of camera equipment by a man, a group of men riding a helicopter, and a man sailing a boat through the water.'}\n",
+      "{'q': 'Is the mime the only person who does something other than singing?', 'video_id': 'v_GqWH2IYPw6U', 'a': 'Yes, the mime walks in with fireworks while the group still sings and many around are seen laughing and smiling.'}\n",
+      "{'q': 'Could you briefly describe the video content?', 'video_id': 'v_juLxWt_3omw', 'a': 'Certainly! The video shows a woman in a blue/white outfit lifting a heavy yellow weight after standing still for a while. While lifting the weight, someone watches the woman and yells in a peremptory manner. Shortly after, the woman drops the weight back down to the ground.'}\n",
+      "{'q': 'Can you give me an overview of the video content?', 'video_id': 'v_7bUu05RIksU', 'a': 'The video showcases a group of men washing cars in a parking lot using various tools and techniques, such as pressure washing hoses, hand towels, and brushes. There are also text displays of special offers and business details throughout the video. The men work on different cars, including a white car and a black SUV.'}\n",
+      "{'q': 'Can you describe what the woman is doing on the lake?', 'video_id': 'v_TpB_zMG3XBA', 'a': 'The woman is pulled forward in the lake and then begins to glide on the water using a surfboard. She sways left and right while sliding, and then slowly squats down, leaving the surfboard and falling into the water and floating on the surface.'}\n",
+      "{'q': 'Can you summarize what the girls are doing in the video?', 'video_id': 'v_AmhfmeKk6Bg', 'a': 'Sure. The video shows a girl brushing the hair of another girl who keeps moving her face around while the first girl keeps brushing the hair.'}\n",
+      "{'q': 'What is the main activity happening in the video?', 'video_id': 'v_rBMQFpHspmo', 'a': 'The main activity in the video is a boy attempting to pole vault over a bar in an indoor field while being watched by several people.'}\n",
+      "{'q': 'Can you describe what happens in the video of \"tree mulching made easy\"?', 'video_id': 'v_bFHpaULTwsE', 'a': 'Sure! The video starts with an introduction of a tree in a grassy field, with a house visible in the background. The title \"tree mulching made easy\" appears on the screen. Then, the scene shows a man preparing the area around the tree, with a pair of gloves, a rake, and 4 bags of mulching materials. The man then proceeds to put the mulch around the tree and give it form with the rake. The camera also zooms in on a sprinkler head to show that it is not clogged with mulch. Finally, the man is shown standing in front of the now mulched tree, giving a thumbs up. He is wearing a blue uniform and cap. Overall, the video demonstrates the process of mulching a tree and highlights the tools and techniques used for the process.'}\n",
+      "{'q': 'What happens at the end of the video?', 'video_id': 'v_ESlUzrtqC98', 'a': 'Near the end of the video, one team gets two consecutive balls in cups which indicates that the other team has to drink two cups of beer. The video ends with the winning team celebrating their victory.'}\n",
+      "{'q': 'Can you describe the content of the video in detail?', 'video_id': 'v_B_-jPPr2RLA', 'a': \"Sure! The video shows two young boys standing on a residential driveway. One of the boys proceeds to play hopscotch twice while the other boy watches. Shortly after, a little girl joins the game and plays hopscotch too. The children seem to be having a fun time and are enjoying each other's company. After playing the game, the kids move away from the driveway and do something else off-camera. It's a heartwarming scene that highlights the innocence of childhood play and the joy it brings to young children. The video paints a nostalgic picture of simple childhood pleasures that are often overlooked. The hopscotch game on the driveway is an excellent example of such an activity that can bring kids together and provide hours of entertainment and social interaction. Overall, the video is a charming display of childhood play that evokes feelings of joy and nostalgia.\"}\n",
+      "{'q': 'What are the instructions that the first man is giving to the second man?', 'video_id': 'v_SHT08nPhIb4', 'a': 'The first man in the video is giving instructions to the second man on how to shoot the basketball. It is not clear what instructions he is giving as it is not provided in the given information.'}\n",
+      "{'q': 'What is the name of the store seen in the video and what does it specialize in?', 'video_id': 'v_0EbXjHsMBmM', 'a': 'The store seen in the video is called \"Skinny Ski\\'s\". It specializes in skiing products and services, including ski maintenance and repair.'}\n",
+      "{'q': 'What is shown on the computer screen in the video?', 'video_id': 'v_TjR436qaQw4', 'a': 'The video shows a Google search screen with someone typing into the search bar. The search results display various pictures, including one with a dragon design. However, it is unclear if there are any other items on the screen besides the dragon design.'}\n",
+      "{'q': 'Can you describe the events that took place in the video?', 'video_id': 'v_zpJ91CkCiyw', 'a': 'Sure! In the video, we see two men on a city street, with one of them taking off his hood and talking to the camera. We then see some men on rollerblades falling and skate down a railing. A person flashes a light at the camera and then a man falls on the railing. Finally, the video ends with the men talking and shaking hands before the end screen is shown.'}\n",
+      "{'q': 'Where does the man play the accordion in the video?', 'video_id': 'v_r9AepFEEfsQ', 'a': 'The video does not provide specific information on where the man plays the accordion in the video. However, it shows him playing the instrument in different positions and locations such as a chair, in front of a camera, in a room, and in a car.'}\n",
+      "{'q': 'Can you give me a brief summary of the video?', 'video_id': 'v_AWAMhmc08Cw', 'a': \"Sure! The video depicts two children in a bathtub playing with toys and rubbing their faces as well as another person's hands interacting with them. The boy continues to play with toys and smile at the camera while rubbing water all over his face.\"}\n",
+      "{'q': 'How does the girl react to seeing the bears?', 'video_id': 'v_BshSmo_rRII', 'a': \"The girl doesn't seem to have much of a reaction, she simply enters the room, sees the bears, and then leaves without saying anything.\"}\n",
+      "{'q': 'What are the main highlights of the video focusing on?', 'video_id': 'v_a1nRXQZ6-Fo', 'a': 'The video focuses on a man who expresses his love for music before demonstrating his talent playing the saxophone. The man is seen wearing a jacket while playing the saxophone in the forefront of the scene, emphasizing his passion and dedication. A woman wearing a black hat is also present in the video.'}\n",
+      "{'q': 'Can you describe the video content in detail?', 'video_id': 'v_j5D5FR6Xtps', 'a': 'In the video, a person is holding a woman’s long hair in one hand and a brush in the other. The person appears to be interacting with the hair by running their fingers through it, styling it or creating different looks. The person proceeds to brush the hair using the brush to smooth out any tangles and create a neat and tidy appearance. Then, the person is shown braiding the hair by weaving the strands together in a specific pattern to create a braided hairstyle. The video showcases a person engaging in hairstyling activities, with a focus on long hair belonging to a woman. Hairstyling can be both practical and artistic, allowing for creative expression and personal grooming.'}\n",
+      "{'q': 'Besides ping pong, what other activities are shown in the video?', 'video_id': 'v_w1VJnYDYYY0', 'a': 'The video shows people playing video games, specifically a man in a blue shirt playing with a Wii. The same man also plays ping pong in a different scene. Additionally, a young boy wearing a red shirt is seen in one scene. The video also shows the players running around while playing ping pong in a big room, implying that they are trying to stay active through sports and physical activity.'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(20):\n",
+    "    print(data[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
